added css html.

--- a/rbernard25.html
+++ b/rbernard25.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Ryan Bernrad</h1>
-<p>I am an Outreach Services Librian at King College in Bristol, Tennessee. I like banjos.</p>
+<h1>Ryan Bernard</h1>
+<p>I am an Outreach Services Librarian at King College in Bristol, Tennessee. I teach Appalachian Studies. I play the fiddle and banjo. I love the outdoors and spending time with my family. I also raise chickens and have a garden.</p>
 
 
 
